# habit_tracker

./:  .env.sample  .env  README.md  coverage.txt  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
main/: models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
main/migrations/: 0001_initial.py  0002_alter_habit_user.py  0003_habit_last_sending_datetime.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py
